--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     Would you still like to know how to use impress.js?
     
 -->
-
+<h1>(Cloud) application software</h1>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>(Cloud) Application Software</title>
+    <title></title>
     
     <meta name="description" content="impress.js is a presentation tool based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com." />
     <meta name="author" content="Bartek Szopka" />
