--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
     <div id="slide1" data-x="500" data-y="-1500">
      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Jolicloud_App_Directory.jpg"
  <h1>Cloud application software has many features</h1>
-    <div class="step slide" data-x="1000" data-y="-1500">
-        <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your talk?</q>
     </div>
+    <div id= "slide 2" class= "step slide data-x=500 data-y="6400">
 
     <!--
         
