--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
 
     <!--
-        
-        Impress.js doesn't depend on any external stylesheet. Script adds all styles it needs for
-        presentation to work.
+        <h1> Cloud Application software</h1>
+        <p> By Gopikhan Indrakumar</p>
         
         This style below contains styles only for demo presentation. Browse it to see how impress.js
         classes are used to style presentation steps, or how to apply fallback styles, but I don't want
