--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ It will not be rotated or scaled.
 
 -->
             <div id="slide0" class="step slide" data-x="500" data-y="-7800">
+                <img src= "http://www.crn.com/ckfinder/userfiles/images/crn/images/cloud_apps400.jpg" alt="while control structure" title="while control structure" style="height:80%;width:auto;margin:0 auto;display:block" />
                 <h1> Cloud Application software</h1>
                 <p> By Gopikhan Indrakumar</p>
             </div>
