--- a/index.html
+++ b/index.html
@@ -101,12 +101,13 @@ It will not be rotated or scaled.
 
 -->
             <div id="slide0" class="step slide" data-x="500" data-y="-7800">
-                <img src= "http://www.crn.com/ckfinder/userfiles/images/crn/images/cloud_apps400.jpg" alt="while control structure" title="while control structure" style="height:80%;width:auto;margin:0 auto;display:block" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Jolicloud_App_Directory.jpg" alt="case control structure" title="case control structure" style="width:100%" />
                 <h1> Cloud Application software</h1>
                 <p> By Gopikhan Indrakumar</p>
             </div>
             <div id="slide1" class="step slide" data-x="500" data-y="-7100">
-                <h1>(Cloud)Application Software has many different features</h1>
+                <img src="http://www.crn.com/ckfinder/userfiles/images/crn/images/cloud_apps400.jpg" alt="while control structure" title="while control structure" style="height:80%;width:auto;margin:0 auto;display:block" />
+                <h1>(Cloud)Application Software is an application program which shares mutual characteristics of a desktop app and a pure web app</h1>
             </div>
             <div id="slide2" class="step slide" data-x="500" data-y="-6400">
                 <h1>https://drive.google.com - Google Sheets</h1>
