--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ It will not be rotated or scaled.
                 <h1>Cloud apps are helpful for businesses because of its agility, productivity, and quality</h1>
             </div>
             <div id="slide4" class="step slide" data-x="500" data-y="-5000">
-                <img src="http://www.gizbot.com/img/2015/09/01-1441100107-digital.jpg" alt="case control structure" title="case control structure" style="width:60%" />
+                <img src="http://www.gizbot.com/img/2015/09/01-1441100107-digital.jpg" align="middle" alt="case control structure" title="case control structure" style="width:60%" />
                 <h1>Cloud application software are changing the way humans live lives. Some examples include, computers which are starting to become invisible, fixing stuff is becoming a lot more simple, and it is starting to become more easier to purchase products from stores using cloud apps.</h1>
             </div>
             <div id="slide5" class="step slide" data-x="500" data-y="-4300>
