--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ It will not be rotated or scaled.
             </div>
             <div id="slide1" class="step slide" data-x="500" data-y="-7100">
                 <img src="http://www.crn.com/ckfinder/userfiles/images/crn/images/cloud_apps400.jpg" alt="while control structure" title="while control structure" style="height:80%;width:auto;margin:0 auto;display:block" />
-                <h1>Cloud application software is an application program which shares mutual characteristics of a desktop app and a pure web app</h1>
+                <h1>Cloud application software are programs which were once only installed on computers, but now can be offered online with the use of the internet</h1>
             </div>
             <div id="slide2" class="step slide" data-x="500" data-y="-6400">
                <img src="http://www.scottishwater.co.uk/~/media/Domestic/Images/559x269/socialMediaBanner2014.ashx?h=269&w=559" alt="case control structure" title="case control structure" style="width:100%" />
